--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
+    "ssl-express-www": "^3.0.6",
     "styled-components": "^5.0.1",
     "twilio": "^3.39.3",
     "twilio-video": "^2.3.0",
