--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
     "@primer/octicons-react": "^9.4.0",
+    "@types/amplitude-js": "^5.8.0",
     "@types/fscreen": "^1.0.1",
     "@types/jest": "^24.9.1",
     "@types/lodash.throttle": "^4.1.6",
@@ -20,6 +21,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "@types/twilio-video": "^2.0.11",
+    "amplitude-js": "^5.10.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
