--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^12.12.26",
     "@types/react": "^16.9.19",
+    "@types/react-amplitude": "^0.1.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
     "@types/twilio-video": "^2.0.11",
-    "amplitude-js": "^5.10.0",
+    "amplitude-js": "^5.11.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
